# pam_irma

./: Makefile  Makefile.in  README.md  configure.ac  pam_irma.c  pam_irma.cpp  pam_irma_details.h
silvia/: config.h  silvia_irma_xmlreader.h
